--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+data-large/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
